<resources>
    <string name="app_name">Groceries</string>
    <string name="splash_name">net car</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_description">Enter your credentials to continue</string>
    <string name="hint_user_name">Username</string>
    <string name="enter_name">Enter name</string>
    <string name="user_email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="user_password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="terms_and_condition">By continuing you agree to our Terms of Service and Privacy Policy.</string>
    <string name="old_user">Already have an account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Log In</string>
    <string name="log_in_description">Enter your emails and password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="register_sucessful_dailouge">Registration successful! Please login</string>
    <string name="enter_name_error">Please enter name</string>
    <string name="input_email_error">Please enter email</string>
    <string name="input_password_error">Please enter password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore">Explore</string>
    <string name="favourite">Favourite</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="enter_email_error">Please enter Email</string>
    <string name="enter_password_error">Please enter password</string>
    <string name="product_name">"Product Name "</string>
    <string name="add_product">Add Product</string>
    <string name="price">Price</string>
    <string name="fruits_vegetables"><![CDATA[Fresh fruits\n& Vegetables]]></string>
    <string name="product_image">Image</string>
    <string name="add_new_product">Add new product</string>
    <string name="cooking_oil_ghee"><![CDATA[Cooking Oil\n& Ghee]]></string>
    <string name="meat_fish"><![CDATA[Meat \n& Fish]]></string>
    <string name="bakery_snacks"><![CDATA[Bakery & Snacks]]></string>
    <string name="dairy_eggs"><![CDATA[Dairy & Snacks]]></string>
    <string name="beverages">"Beverages"</string>
    <string name="add_new_category">Add new Category</string>
    <string name="category_name">Name</string>
    <string name="image">Image</string>
    <string name="no_categories_message">"No Categories are available "</string>
    <string name="product_added">Product is added</string>
    <string name="category_added_list">Category is added in the list</string>
    <string name="input_category_name">\"Please input category name \"</string>
    <string name="input_category_image">\"Please input category image \"</string>
    <string name="products">Products</string>
    <string name="no_products_message">No Products are available</string>
    <string name="no_products_cart">No products added to cart</string>
    <string name="checkout">Check out price is %s </string>
    <string name="rupee">₹%d</string>
    <string name="add_product_cart">Add To Cart</string>
    <string name="no_products_favourites">No products in favourites</string>
    <string name="add_all">Add all items to cart</string>
    <string name="error_select_category_image">Please select category image</string>
    <string name="orders">Orders</string>
    <string name="my_details">My Details</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="promo_code">Promo Code</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="no_items">"No items added to card "</string>
    <string name="txt_checkout">Checkout</string>
    <string name="delivery">Delivery</string>
    <string name="selectmethod">Select Method</string>
    <string name="order_accepted">Your order has been \naccepted</string>
    <string name="order_accepted_description">Your item has been placed and is on \nit\'s way to being processed</string>
    <string name="no_internet_message">"No internet is available "</string>


</resources>