<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/products">

    <fragment
        android:id="@+id/products"
        android:name="com.anil.groceries.ui.productlist.ProductListFragment"
        android:label="Products" />

    <fragment
        android:id="@+id/cart"
        android:name="com.anil.groceries.ui.cart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/favourite"
        android:name="com.anil.groceries.ui.favourite.FavouriteFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_favourite" />
    <fragment
        android:id="@+id/account"
        android:name="com.anil.groceries.ui.account.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />


</navigation>